nullaway_error_2fe46e21-cb00-4eb7-9027-badc58d5bd0a.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/MapImage.java:41: error: [NullAway] initializer method does not guarantee @NonNull field absolutePath (line 35) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public MapImage() {
         ^
    (see http://t.uber.com/nullaway )
